--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visualizehtml",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "dev": "vite",
     "serve": "vite preview",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/emaLorenzo/visualize-markup#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.1",
     "vite": "^2.7.10"
   }
 }
