--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.1",
     "vite": "^2.7.10"
+  },
+  "dependencies": {
+    "blobity": "^0.1.7"
   }
 }
